@@ -4,101 +4,135 @@ import com.ecommerce.ea.DTOs.request.PhotoRequest;
 import com.ecommerce.ea.DTOs.response.PhotoResponse;
 import com.ecommerce.ea.DTOs.update.PhotoUpdate;
 import com.ecommerce.ea.entities.Photo;
+import com.ecommerce.ea.entities.Product;
 import com.ecommerce.ea.exceptions.BadRequestException;
 import com.ecommerce.ea.interfaces.IPhoto;
 import com.ecommerce.ea.repository.PhotoRepository;
-import com.ecommerce.ea.repository.ProductSingleRepository;
-import org.springframework.web.multipart.MultipartFile;
-import reactor.core.publisher.Mono;
-
+import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Service
 public class PhotoService implements IPhoto {
 
     private final PhotoRepository photoRepository;
-    private  final ProductSingleRepository productRepository;
+    private  final ProductService productService;
 
-    public PhotoService(PhotoRepository photoRepository, ProductSingleRepository productRepository){
+    public PhotoService(PhotoRepository photoRepository, ProductService productService){
         this.photoRepository = photoRepository;
-        this.productRepository = productRepository;
+        this.productService = productService;
     }
 
     @Override
-    public Mono<PhotoResponse> AddPhoto(PhotoRequest photoRequest) {
+    public Photo findByPhotoIdBaseForm(int photoId) {
+        return photoRepository.findById(photoId)
+                .orElseThrow(() -> new BadRequestException("photoId was not found on the database"));
+    }
+
+    /// Add a photo object to the database
+    @Override
+    public PhotoResponse addPhoto(PhotoRequest photoRequest) {
         //Convert the photoRequest into photoObject
-        Photo photo = photoRequest.ToPhotoObj();
+        Photo photo = this.ToPhotoObj(photoRequest);
+        //Photo Order
+        this.photoOrder(photoRequest.getProductId());
         //Stores it on the photoObj variable and save it into the database
-        Mono<Photo> photoObj = photoRepository.save(photo);
+        Photo photoObj = photoRepository.save(photo);
         //Convert the photoObj to PhotoResponseObj
-        return photoObj.map(PhotoResponse::ToPhotoResponseObj);
+        return this.ToPhotoResponseObj(photoObj);
     }
-
+    /// Add Multiples Photos objects to the database
     @Override
-    public Mono<List<PhotoResponse>> AddMultiplePhotos(int productID, List<MultipartFile> photos) {
+    public List<PhotoResponse> addMultiplePhotos(int productID, List<PhotoRequest> photos) {
         return null;
     }
 
     @Override
-    public Mono<PhotoResponse> EditPhoto(PhotoUpdate photoUpdate) {
-        return photoRepository.findById(photoUpdate.getPhotoID())
-                .switchIfEmpty(Mono.error(new BadRequestException("photoId was not found on the database")))
-                .flatMap(photo -> {
-                    return productRepository.findById(photoUpdate.getProductId())
-                            .switchIfEmpty(Mono.error(new BadRequestException("productId was not found on the database")))
-                            .flatMap(product -> {
-                                //Edit Changes
-                                photo.setProduct(product);
-                                photo.setPhotoValue(photoUpdate.getPhotoValue());
-                                return photoRepository.save(photo);
-                            });
-                })
-                //Convert it to PhotoResponse
-                .map(PhotoResponse::ToPhotoResponseObj);
+    public PhotoResponse editPhoto(PhotoUpdate photoUpdate) {
+        // Photo Validation
+        Photo photo = this.findByPhotoIdBaseForm(photoUpdate.getPhotoID());
+
+        // Product Validation
+        Product product = productService.findProductByIdBaseForm(photoUpdate.getProductId());
+
+        //Edit Changes
+        photo.setProduct(product);
+        photo.setPhotoValue(photoUpdate.getPhotoValue());
+        Photo photoSaved = photoRepository.save(photo);
+        //Convert "photoSave" to PhotoResponse
+        return this.ToPhotoResponseObj(photoSaved);
+    }
+    /// Delete a photo object to the database base on a productId
+    @Override
+    public Boolean deletePhoto(int photoID) {
+        //photoId validation
+        this.findByPhotoIdBaseForm(photoID);
+        //Delete photoObj
+        photoRepository.deleteById(photoID);
+        return true;
     }
 
+    /// Get All photos objects from the database base on a productId
     @Override
-    public Mono<Boolean> DeletePhoto(int photoID) {
-         return  photoRepository.deleteById(photoID).thenReturn(true).onErrorReturn(false);
+    public List<PhotoResponse> getAllPhotosByProductID(int productID) {
+        //photoId validation
+        productService.findProductByIdBaseForm(productID);
+        //Retrieve all the photos base on the productId
+        List<Photo> photoList = photoRepository.findAllPhotosByProductId(productID);
+
+        return photoList.stream().map(this::ToPhotoResponseObj).toList();
     }
 
+
+    /// This function sets the index in 0, and increase the index of the new Products
     @Override
-    public Mono<List<PhotoResponse>> GetAllPhotosByProductID(int productID) {
-        return productRepository.findById(productID)
-                .switchIfEmpty(Mono.error(new BadRequestException("productId was not found on the database")))
-                .then(photoRepository.findAllPhotosByProductId(productID).map(photos ->
-                                        photos.stream().map(PhotoResponse::ToPhotoResponseObj).collect(Collectors.toList())));
-    }
-
-
-    @Override
-    public Mono<Void> PhotoOrder(int productID) {
-
+    public void photoOrder(int productID) {
         if (productID == 0) {
-            return Mono.error(new BadRequestException("ProductID is empty"));
+            throw new BadRequestException("ProductID is empty");
+        }
+        /// Retrieve all the photos base on the productId
+        List<Photo> photosList = photoRepository.findByProductIDOrderByPhotosID(productID);
+        /// Index assignation
+        for (int index = 0; index < photosList.size(); index++) {
+            Photo photo = photosList.get(index);
+            if (photo.getIndex() != index) {
+                photo.setIndex(index);
+            }
         }
 
-        return photoRepository.findByProductIDOrderByPhotosID(productID)
-                .flatMap(photosList -> {
-                    for (int index = 0; index < photosList.size(); index++) {
-                        Photo photo = photosList.get(index);
-                        if (photo.getIndex() != index) {
-                            photo.setIndex(index);
-                        }
-                    }
-                    return photoRepository.saveAll(photosList).then();
-                });
+        photoRepository.saveAll(photosList);
     }
 
 
 
+    /// This function is the one used for the product main photo to show
     @Override
-    public Mono<List<PhotoResponse>> GetPhotosIndexZero() {
-        return photoRepository.findByIndex(0) // Mono<List<Photo>>
-                .map(photos -> photos.stream()
-                        .map(PhotoResponse::ToPhotoResponseObj)
-                        .collect(Collectors.toList())
-                );
+    public List<PhotoResponse> getPhotosIndexZero(int productId) {
+        //it retrieves all the photos on the databases with index of 0
+        List<Photo> photoList = photoRepository.findByIndexZero(productId);
+        // Convert each photo from photoList into PhotoResponse type
+        return photoList.stream().map(this::ToPhotoResponseObj).toList();
+    }
+
+    @Override
+    public PhotoResponse ToPhotoResponseObj(Photo photo) {
+        PhotoResponse photoObj = new PhotoResponse();
+        photoObj.setPhotoValue(photoObj.getPhotoValue());
+        photoObj.setIndex(photoObj.getIndex());
+        photoObj.setProductId(photo.getProduct().getProductId());
+        return photoObj;
+    }
+
+    @Override
+    public Photo ToPhotoObj(PhotoRequest photoRequest) {
+        /// Product Inicialization
+        Product product = productService.findProductByIdBaseForm(photoRequest.getProductId());
+        /// Photo transformation
+        Photo photo = new Photo();
+        photo.setPhotoValue(photoRequest.getPhotoValue());
+        photo.setIndex(photoRequest.getIndex());
+        photo.setProduct(product);
+
+        return photo;
     }
 
 }
